
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int SupressSendPacket; } ;
typedef TYPE_1__ OPENVPN_SERVER ;



void OvsBufferLimit(void *param, const bool reached)
{
 if (param == ((void*)0))
 {
  return;
 }

 ((OPENVPN_SERVER *)param)->SupressSendPacket = reached;
}
